Changed record download implementations to use scrollable results for performance reasons, some modifications to upload service, and implementation of Species Profile downloading.